[gd_scene format=3 uid="uid://cu51dy8duh3xn"]

[ext_resource type="FontFile" uid="uid://gsbg0718grhb" path="res://Fonts/ImaginaryImages-O7VP.ttf" id="1_37p78"]
[ext_resource type="Script" uid="uid://bqni6oklr2vjd" path="res://Assets/Scripts/hud.gd" id="1_64ctp"]

[node name="HUD" type="CanvasLayer" unique_id=195147303]
script = ExtResource("1_64ctp")

[node name="TimerLabel" type="Label" parent="." unique_id=1803161318]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -29.0
offset_right = 29.0
offset_bottom = 34.0
grow_horizontal = 2
scale = Vector2(3, 3)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_constants/shadow_outline_size = 3
theme_override_fonts/font = ExtResource("1_37p78")
theme_override_font_sizes/font_size = 32
text = "300"

[node name="UpdateLabel" type="Timer" parent="." unique_id=1096618300]
wait_time = 0.1

[connection signal="timeout" from="UpdateLabel" to="." method="_on_update_label_timeout"]
